--- a/minhacidade-front/src/pages/formulario/cadEndereco.css
+++ b/minhacidade-front/src/pages/formulario/cadEndereco.css
@@ -1,108 +1,117 @@
-
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #e6f7ff;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #e6f7ff;
 }
 
 
 .titulo {
 text-align: center;
 }
-  .container {
-    max-width: 600px;
-    margin: 20px auto;
-    padding: 20px;
-    box-shadow: 0 0 10px rgba(107, 8, 236);
-    border-radius: 5px;
-    background: #ffffff;
+.container {
+  max-width: 600px;
+  margin: 20px auto;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(107, 8, 236);
+  border-radius: 5px;
+  background: #ffffff;
 
-  }
-  
-  .container {
-    max-width: 600px;
-    margin: 20px auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    
+}
 
-  }
+.container {
+  max-width: 600px;
+  margin: 20px auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
   
-  /* Estilo para os inputs e selects */
-  .container input[type="text"],
-  .container input[type="datetime-local"],
-  .container input[type="email"],
-  .container select {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-  }
-  
-  
-  
-  .container p {
-    width: 100%; /* Garante que os parágrafos ocupem 100% da largura do contêiner */
-    margin: 10px 0 5px;
-    font-weight: bold;
-    color: #555;
-  }
-  
-  .container button[type="submit"] {
-    background-color: #4CAF50; /* Cor de fundo */
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
-    margin-top: 10px;
-  }
-  
-  .container button[type="submit"]:hover {
-    background-color:  #003d66 /* Cor de fundo ao passar o mouse */
-  }
-  
-  /* Estilo para o rodapé (opcional) */
-  footer {
-    text-align: center;
-    margin-top: 20px;
-    padding: 10px;
-    background-color: #f0f0f0;
-    border-top: 1px solid #ccc;
-  }
 
-  .App-header {
-    background-color: #e6f7ff;
-  }
-  
-  /* Estiliza os campos de input e select */
-input[type="text"], input[type="datetime-local"], select, input[type="email"] {
-  width: 100%; /* Garante que os campos ocupem 100% da largura do contêiner */
+}
+
+/* Estilo para os inputs e selects */
+.container input[type="text"],
+.container input[type="datetime-local"],
+.container input[type="email"],
+.container select {
+  width: 100%;
   padding: 10px;
-  margin: 5px 0 15px;
+  margin-bottom: 10px;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
 }
 
+
+
+.container p {
+  width: 100%; /* Garante que os parágrafos ocupem 100% da largura do contêiner */
+  margin: 10px 0 5px;
+  font-weight: bold;
+  color: #555;
+}
+
+.container button[type="submit"] {
+  background-color: #4CAF50; /* Cor de fundo */
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  margin-top: 10px;
+  margin-left: 20px;
+}
+
+.container button[type="submit"]:hover {
+  background-color:  #003d66 /* Cor de fundo ao passar o mouse */
+}
+
+/* Estilo para o rodapé (opcional) */
+footer {
+  text-align: center;
+  margin-top: 20px;
+  padding: 10px;
+  background-color: #f0f0f0;
+  border-top: 1px solid #ccc;
+}
+
+.App-header {
+  background-color: #e6f7ff;
+}
+
+/* Estiliza os campos de input e select */
+input[type="text"], input[type="datetime-local"], select, input[type="email"] {
+width: 100%; /* Garante que os campos ocupem 100% da largura do contêiner */
+padding: 10px;
+margin: 5px 0 15px;
+border: 1px solid #ccc;
+border-radius: 4px;
+box-sizing: border-box;
+}
+
 /* Estiliza os botões */
 input[type="button"], input[type="submit"] {
-  width: 100%; /* Garante que os botões ocupem 100% da largura do contêiner */
-  padding: 10px;
-  margin: 10px 0;
-  border: 2px solid rgb(107, 8, 236); /* Borda roxa */
-  border-radius: 4px;
-  background-color: white; /* Fundo branco */
-  color: black; /* Fonte preta */
-  font-size: 16px;
-  cursor: pointer;
+width: 100%; /* Garante que os botões ocupem 100% da largura do contêiner */
+padding: 10px;
+margin: 10px 0;
+border: 2px solid rgb(107, 8, 236); /* Borda roxa */
+border-radius: 4px;
+background-color: white; /* Fundo branco */
+color: black; /* Fonte preta */
+font-size: 16px;
+cursor: pointer;
 }
 
 input[type="button"]:hover, input[type="submit"]:hover {
-  background-color: #e6f7ff;
+background-color: #e6f7ff;
+}
+
+.error{
+color: red;
+font-size: 10px;
+}
+
+.map{
+margin-top: 20px;
 }
